--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nested-filters",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "http-server"
   },
